--- a/Project/pom.xml
+++ b/Project/pom.xml
@@ -76,7 +76,7 @@
                         <!-- Usage: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.example.LibraryGUI</mainClass>
+                            <mainClass>com.example.Login</mainClass>
                         </configuration>
                     </execution>
                 </executions>
