--- a/Project/pom.xml
+++ b/Project/pom.xml
@@ -46,9 +46,8 @@
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>1.4.12</version> 
+            <version>1.4.14</version> 
         </dependency>
-
 
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -56,6 +55,13 @@
             <version>2.0.7</version>
             <scope>runtime</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
+            <version>5.9</version>
+        </dependency>
+
     </dependencies>
 
     <build>
