--- a/Project/pom.xml
+++ b/Project/pom.xml
@@ -62,6 +62,12 @@
             <version>5.9</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.github.cdimascio</groupId>
+            <artifactId>dotenv-java</artifactId>
+            <version>3.0.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
